Reworked unit test with an aim of maybe automating the creation of these tests.